force-app/main/default/objects/Activity/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>TEXT((DATEVALUE(LastModifiedDate)) - (DATEVALUE(CreatedDate))) &amp; &apos; Days &apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days</label>
    <type>Text</type>
</CustomField>