force-app/main/default/objects/Activity/fields/DevOps_Assigned__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DevOps Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>