force-app/main/default/objects/Activity/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <formula>TEXT((DATEVALUE(LastModifiedDate) - DATEVALUE(CreatedDate)) * 24) &amp; &apos;Hours&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours</label>
    <type>Text</type>
</CustomField>