force-app/main/default/objects/Activity/fields/Jira_Key__c.field-meta.xml
<CustomField>
    <fullName>Jira_Key__c</fullName>
    <label>Jira Key</label>
    <length>225</length>
    <type>Text</type>
</CustomField>