force-app/main/default/objects/Activity/fields/Task_Log__c.field-meta.xml
<CustomField>
    <fullName>Task_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Log</label>
    <referenceTo>Task_Log__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Task_Task_log</relationshipName>
    <type>Lookup</type>
</CustomField>